--- a/uct-dsfi/08 - Neural Nets - mnistclassification_r.Rmd
+++ b/uct-dsfi/08 - Neural Nets - mnistclassification_r.Rmd
@@ -188,11 +188,12 @@ dim(subset)
 Finally, we can predict on the 10 first examples.
 
 ```{r}
-model %>% predict_classes(subset)
+# update to video: predict_classes deprecated from tensorflow >= v2.6
+model %>% predict(subset) %>% k_argmax() %>% as.numeric()
 ```
 
 Here we predict on all of the `x_test `data.
 
 ```{r}
-model %>% predict_classes(x_test)
+model %>% predict(x_test) %>% k_argmax() %>% as.numeric()
 ```
